--- a/metadata.yaml
+++ b/metadata.yaml
@@ -31,5 +31,6 @@ subjects:
 - !lcsh 'Nonsense verses'
 - !lcsh 'Dogs -- Juvenile poetry'
 - !lcsh 'Conduct of life -- Juvenile poetry'
+- GITenberg
 title: Dame Trot and Her Cat
 url: http://www.gutenberg.org/ebooks/45276
